--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
           <form id="form">
             <!-- Included fieldset to be semantically correct, h1 & p are linked via aria-labelledby and aria-describedby -->
             <fieldset aria-labelledby="title" aria-describedby="description">
-              <input type="radio" name="ratings" id="rating_value" value="1" />
-              <label for="rating_value" class="radio_button">1</label>
+              <input type="radio" name="ratings" id="value1" value="1" />
+              <label for="value1" class="radio_button">1</label>
 
-              <input type="radio" name="ratings" id="rating_value" value="2" />
-              <label for="rating_value" class="radio_button">2</label>
+              <input type="radio" name="ratings" id="value2" value="2" />
+              <label for="value2" class="radio_button">2</label>
 
-              <input type="radio" name="ratings" id="rating_value" value="3" />
-              <label for="rating_value" class="radio_button">3</label>
+              <input type="radio" name="ratings" id="value3" value="3" />
+              <label for="value3" class="radio_button">3</label>
 
-              <input type="radio" name="ratings" id="rating_value" value="4" />
-              <label for="rating_value" class="radio_button">4</label>
+              <input type="radio" name="ratings" id="value4" value="4" />
+              <label for="value4" class="radio_button">4</label>
 
-              <input type="radio" name="ratings" id="rating_value" value="5" />
-              <label for="rating_value" class="radio_button">5</label>
+              <input type="radio" name="ratings" id="value5" value="5" />
+              <label for="value5" class="radio_button">5</label>
               <!--Submit Button -->
               <button id="button" type="button" onclick="displayRadioValue()">
                 Submit
